# CoronaChat

./: CMakeLists.txt
src/: coronachat_status.h  main.c
src/common/: common.h
src/ui/: ui.c  ui.h  ui_internals.h
src/utils/linked_list/: linked_list.c  linked_list.h  linked_list_internals.h
src/utils/network_utils/: network_utils.c  network_utils.h  network_utils_internals.h
